--- a/app/src/main/res/layout/calc_wb.xml
+++ b/app/src/main/res/layout/calc_wb.xml
@@ -6,9 +6,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/row_height"
+        android:layout_height="wrap_content"
         android:background="?attr/dividerColor"
-        android:elevation="@dimen/elevation_12">
+        android:elevation="@dimen/elevation_8">
 
         <ImageButton
             android:layout_width="wrap_content"
