--- a/app/src/main/res/layout/fragment_calc.xml
+++ b/app/src/main/res/layout/fragment_calc.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:weightSum="1"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:weightSum="1"
               >
-
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.30"
-        android:elevation="@dimen/elevation_8"
+        android:elevation="@dimen/elevation_12"
         android:background="?attr/backgroundColor"
-        >
+        android:layout_weight="0.3">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -87,13 +86,13 @@
 
     </ScrollView>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.70"
+        android:layout_weight="0.7"
         android:id="@+id/calc_frame"
         android:background="?attr/backgroundDarkColor">
+    </FrameLayout>
 
-    </LinearLayout>
 
 </LinearLayout>
