--- a/app/src/main/res/layout/calc_wb.xml
+++ b/app/src/main/res/layout/calc_wb.xml
@@ -74,7 +74,7 @@
                         android:gravity="center">
 
                         <NumberPicker
-                            android:id="@+id/apc_wb_time_pick_h"
+                            android:id="@+id/ac_wb_time_pick_h"
                             style="@style/NumberPickerStyle"
                             android:theme="@style/NumberPickerStyleText"
                             />
