--- a/app/src/main/res/layout/fragment_chklist.xml
+++ b/app/src/main/res/layout/fragment_chklist.xml
@@ -37,7 +37,7 @@
             android:orientation="vertical"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
-            android:layout_marginRight="@dimen/row_padding"
+            android:padding="@dimen/row_padding"
 
             >
 
